# multilinear

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  LocMetrics.html  LocMetricsCommentWords.csv  LocMetricsFiles.csv  LocMetricsFolders.csv  LocMetricsFunctions.csv  LocMetricsFunctions.html  Makefile  Multilinear-bench.prof  Multilinear.cabal  README.md  Tensor.cabal  appveyor.yml  benchmark-results.html  benchmark.sh  build.sh  check-and-dist.sh  classify_data.csv  deploy.sh  exp_data.csv  gpu.tix  id-build.sh  input_data.csv  jsontest.json  loc.sh  mlp_classify.csv  mlp_input.csv  package.yaml  stack.yaml  test.sh  vcs.sh  ~neurol.tmp
Doc/: Examples.txt.txt
Multilinear-examples/: Multilinear-examples.cabal  stack.yaml
Multilinear-examples/app/: Main.hs
app/: Lekser.hs  Main.hs  Parser.hs
benchmark/: .gitignore  Bench.hs  results.html  run.sh
benchmark/memory/: Bench.hs
benchmark/profile/: Bench.hs
benchmark/time/: Bench.hs
cbits/: dot.c  dot.cpp  makefile  vec_mult.c  vec_mult.cl
doc/: Multilinear-Form.html  Multilinear-Generic.html  Multilinear-Index-Finite.html  Multilinear-Index-Infinite.html  Multilinear-Index.html  Multilinear-Library.html  Multilinear-Matrix.html  Multilinear-NForm.html  Multilinear-NVector.html  Multilinear-Parallel-Form.html  Multilinear-Parallel-Generic.html  Multilinear-Parallel-Matrix.html  Multilinear-Parallel-NForm.html  Multilinear-Parallel-NVector.html  Multilinear-Parallel-Tensor.html  Multilinear-Parallel-Vector.html  Multilinear-Tensor.html  Multilinear-Vector.html  Multilinear.haddock  Multilinear.html  Multilinear.txt  doc-index-124.html  doc-index-33.html  doc-index-36.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-60.html  doc-index-92.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  (+25 more)
doc/Multilinear-0.8.0.0/: Library.html  Multilinear-Form.html  Multilinear-Generic.html  Multilinear-Index-Finite.html  Multilinear-Index-Infinite.html  Multilinear-Index.html  Multilinear-Matrix.html  Multilinear-NForm.html  Multilinear-NVector.html  Multilinear-Parallel-Form.html  Multilinear-Parallel-Generic.html  Multilinear-Parallel-Matrix.html  Multilinear-Parallel-NForm.html  Multilinear-Parallel-NVector.html  Multilinear-Parallel-Tensor.html  Multilinear-Parallel-Vector.html  Multilinear-Tensor.html  Multilinear-Vector.html  Multilinear.haddock  Multilinear.html  Multilinear.txt  doc-index-124.html  doc-index-33.html  doc-index-36.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-60.html  doc-index-92.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  (+26 more)
doc/aeson-1.1.2.0/: Data-Aeson-Encode.html  Data-Aeson-Encoding-Internal.html  Data-Aeson-Encoding.html  Data-Aeson-Internal-Time.html  Data-Aeson-Internal.html  Data-Aeson-Parser.html  Data-Aeson-TH.html  Data-Aeson-Text.html  Data-Aeson-Types.html  Data-Aeson.html  aeson.haddock  aeson.txt  doc-index-46.html  doc-index-60.html  doc-index-62.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-Z.html  doc-index.html  index.html  (+10 more)
doc/base-4.9.1.0/: Control-Concurrent-Chan.html  Control-Concurrent.html  Data-Bits.html  Data-Eq.html  Data-Monoid.html  Data-Ord.html  Data-Semigroup.html  Data-Typeable-Internal.html  Foreign-C-Error.html  Foreign-C-Types.html  Foreign-Marshal-Error.html  Foreign-Ptr.html  Foreign-Storable.html  GHC-Conc-IO.html  GHC-Conc-Sync.html  GHC-Conc.html  GHC-ConsoleHandler.html  GHC-ExecutionStack-Internal.html  GHC-Generics.html  GHC-IO-Encoding-CodePage-Table.html  GHC-IO-Encoding-CodePage.html  GHC-IO-Encoding.html  GHC-IO-Handle-FD.html  GHC-IO-Handle.html  GHC-Natural.html  GHC-Windows.html  Prelude.html  System-CPUTime.html  System-Environment.html  System-IO.html  System-Posix-Types.html  base.haddock  base.txt  doc-index-A.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  (+16 more)
doc/cereal-0.5.4.0/: Data-Serialize-Get.html  Data-Serialize-IEEE754.html  Data-Serialize-Put.html  Data-Serialize.html  cereal.haddock  cereal.txt  doc-index.html  index.html  mini_Data-Serialize-Get.html  mini_Data-Serialize-IEEE754.html  mini_Data-Serialize-Put.html  mini_Data-Serialize.html
doc/src/: Multilinear.Form.html  Multilinear.Generic.html  Multilinear.Index.Finite.html  Multilinear.Index.Infinite.html  Multilinear.Index.html  Multilinear.Library.html  Multilinear.Matrix.html  Multilinear.NForm.html  Multilinear.NVector.html  Multilinear.Parallel.Form.html  Multilinear.Parallel.Generic.html  Multilinear.Parallel.Matrix.html  Multilinear.Parallel.NForm.html  Multilinear.Parallel.NVector.html  Multilinear.Parallel.Tensor.html  Multilinear.Parallel.Vector.html  Multilinear.Tensor.html  Multilinear.Vector.html  Multilinear.html
doc/statistics-0.13.3.0/: Statistics-Autocorrelation.html  Statistics-Constants.html  Statistics-Correlation-Kendall.html  Statistics-Correlation.html  Statistics-Distribution-Beta.html  Statistics-Distribution-Binomial.html  Statistics-Distribution-CauchyLorentz.html  Statistics-Distribution-ChiSquared.html  Statistics-Distribution-Exponential.html  Statistics-Distribution-FDistribution.html  Statistics-Distribution-Gamma.html  Statistics-Distribution-Geometric.html  Statistics-Distribution-Hypergeometric.html  (+102 more)
ghci/: Multilinear.hi  Multilinear.hs
src/: Library.hs  Library.lnk  Multilinear.hs  Tensor.hs  temp.hs
test/: Spec.hs
tools/: NeuroLekser.x  NeuroParser.y
(+418 files in other folders)
