name:                Multilinear
version:             0.8.0.0
synopsis:            Efficient (multi)linear algebra
description:         Library implements (multi)linear algebra based on multidimensional indexed arrays - tensors. Quick tutorial is available here: "Multilinear"
homepage:            https://github.com/ArturB/Multilinear
license:             GPL-3
license-file:        LICENSE
author:              Artur M. Brodzki
maintainer:          artur.brodzki@gmail.com
copyright:           2017 Artur M. Brodzki
category:            Math, Algebra, Numeric
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Multilinear
                    ,  Multilinear.Form
                    ,  Multilinear.Generic
                    ,  Multilinear.Index
                    ,  Multilinear.Index.Finite
                    ,  Multilinear.Index.Infinite
                    ,  Multilinear.Matrix
                    ,  Multilinear.NForm
                    ,  Multilinear.NVector
                    ,  Multilinear.Tensor
                    ,  Multilinear.Vector
  build-depends:       base >= 4.7 && < 5
                    ,  cereal
                    ,  containers
                    ,  hashable
                    ,  aeson
                    ,  bytestring
                    ,  zlib
                    ,  mwc-random
                    ,  primitive
                    ,  statistics
                    ,  vector
                    ,  cereal-vector
                    ,  csv-enumerator
                    ,  transformers
                    ,  either
                    ,  deepseq
                    ,  lens
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2 
  default-extensions:  

test-suite Multilinear-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Multilinear
                     , transformers
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  

benchmark Multilinear-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Bench.hs
  build-depends:       base
                     , Multilinear
                     , criterion
                     , cereal
                     , containers
                     , hashable
                     , aeson
                     , bytestring
                     , zlib
                     , mwc-random
                     , primitive
                     , statistics
                     , vector
                     , cereal-vector
                     , csv-enumerator
                     , transformers
                     , either
                     , deepseq
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  

source-repository head
  type:     git
  location: https://github.com/ArturB/Multilinear
