name:                Tensor
version:             0.1.0.0
synopsis:            Calculations of tensors
description:         Please see README.md
homepage:            https://github.com/githubuser/Tensor#readme
license:             BSD3
license-file:        LICENSE
author:              Artur M. Brodzki
maintainer:          artur.brodzki@gmail.com
copyright:           2017 Artur M. Brodzki
category:            Numeric
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tensor
                       Tensor.Index
                       Tensor.Lazy
                       Tensor.Multilinear
                       Tensor.Restricted
  build-depends:       
                       base >= 4.7 && < 5,
                       binary -any,
                       vector -any,
                       vector-binary-instances -any
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable Tensor-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Tensor
                     , vector
  default-language:    Haskell2010

test-suite Tensor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Tensor
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Tensor
